Syntax Corrigations